# macpep-scylladb

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  macfix.md  mypy.ini  package-lock.json  pyproject.toml  single-node-compose.yml
.github/workflows/: build.yml
experiment/: experiment.md  mass.csv
macpep_scylladb/: __main__.py
macpep_scylladb/database/: Peptide.py  Protein.py
macpep_scylladb/models/: AminoAcid.py  DigestEnzyme.py  NeutralLoss.py  Protein.py  Trypsin.py
macpep_scylladb/modules/: Cql.py  CqlTest.py  Inserter.py  Partitioner.py  Plots.py  Proteomics.py  Query.py  QueryPerformance.py  UniprotDigest.py
macpep_scylladb/modules/protein_digist/: ProteinDigist.py
macpep_scylladb/proteomics/: AminoAcid.py  NeutralLoss.py  Trypsin.py  digest.py  mass.py
macpep_scylladb/utils/: UniprotTextReader.py  dml.py  hash.py  model_convert.py  parser.py  queries.py  rolling_set.py
macpep_scylladb/utils/proteomics/: digest.py
tests/: test_parser.py
tests/modules/: test_Partitioner.py  test_Proteomics.py
tests/utils/: protein.txt  test_UniprotTextReader.py
