[tool.poetry]
name = "macpep-scylladb"
version = "0.1.0"
description = "CLI application to digest uniprot protein .txt files and insert them into Scylla DB."
authors = ["kulgg <75735874+kulgg@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "macpep_scylladb"}]

[tool.poetry.scripts]
x = "macpep_scylladb.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.4.0"
exitstatus = "^2.2.0"
cassandra-driver = "^3.25.0"
sortedcontainers = "^2.4.0"
progress = "^1.6"
xxhash = "^3.2.0"
pandas = "^1.5.3"
matplotlib = "^3.6.3"

[tool.poetry.group.dev.dependencies]
testfixtures = "^7.0.1"
pytest = "^7.2.0"
black = "^22.10.0"
flake8 = "^5.0.4"
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"